--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding: 13px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.buttonSuits{
+  display: flex;
+  margin: 0;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hrColorBlack{
+  width: 350px;
+  margin-top: 14px;
+  border: solid 2px black;
+  display: block;
+}
+
+.hrColorRed{
+  width: 350px;
+  margin-top: 14px;
+  display: block; 
+  border: solid 2px rgb(255, 0, 0);
+}
+
+.coutingRounds{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 380px;
+}
+
+.users-name-container{
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  width: 100%;
+  padding: 0;
+  padding-bottom: 15px;
+}
+
+
+.winner-loser-container{
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+  width: 100%;
+}
+
+
+.h1-container{
+  margin: 0;
+}
+
+.input-user1{
+  font-weight: 600;
+  font-size: large;
+  text-align: left;
+}
+.input-user2{
+  font-weight: 600;
+  font-size: large;
+  text-align: right;
 }
